# drova

./: Cargo.toml  README.md
drova-plugins/: Cargo.toml
drova-sdk/: Cargo.toml
drova-sdk/src/: lib.rs
drova_plugins/: Cargo.toml  README.md
drova_plugins/src/: lib.rs  markdown.rs  text.rs  utils.rs
drova_plugins/src/gemini/: gemtext.rs  mod.rs  protocol.rs
drova_plugins/src/http/: protocol.rs
drova_sdk/: Cargo.toml  README.md
drova_sdk/src/: lib.rs  requester.rs
