[package]
name = "drova_plugins"
version = "3.0.1"
edition = "2021"

authors = ["artegoser"]
license = "MIT"
description = "Main plugins for drova"
repository = "https://github.com/tempoworks/drova"
homepage = "https://github.com/TempoWorks/drova/tree/main/drova_plugins"
readme = "./README.md"
keywords = ["drova", "plugins"]
categories = ["text-processing", "network-programming"]

[dependencies]
dalet = { version = "1.0.0-pre.33", features = [
  "types",
], default-features = false }
url = "2.5.4"
drova_sdk = { path = "../drova_sdk", version = "3.0.0" }
tokio-gemini = { version = "0.5.2" }
bytes = "1.10.1"

reqwest = "0.12.5"
mime = "0.3.17"

async-trait = "0.1.88"
markdown = "1.0.0"
