[package]
name = "drova_sdk"
version = "1.0.6"
edition = "2021"

authors = ["artegoser"]
license = "MIT"
description = "Sdk for absolute converter of formats for dalet"
repository = "https://github.com/tempoworks/drova"
homepage = "https://github.com/TempoWorks/drova/tree/main"
readme = "./README.md"
keywords = ["drova"]
categories = ["text-processing", "network-programming"]

[dependencies]
dalet = { version = "1.0.0-pre.29", features = [
  "types",
], default-features = false }
url = "2.5.4"

async-trait = "0.1.88"
indexmap = '2.9.0'

glob-match = "0.2.1"

serde = { version = "1", features = ["derive"] }
